# calgen_bot

./: .gitignore  Dockerfile  Dockerfile.manager  LICENSE  Modelfile  README.md  check_calendar_generator.sh  check_errors.sh  cron_script.sh  docker-compose.yml  docker-compose.yml.example  healthcheck.sh  logrotate.conf  msmtprc  offset.json  pyproject.toml  requirements.txt  settings.yaml.example  setup.sh  start.sh  supervisord.conf
api_data/: AgACAgQAAxkBAAMiZnNk0pNsrYduif9xJOlXh4X2RbQAAlrFMRtxA5BT_G0VK3hfKRQBAAMCAAN5AAM1BA.json
config/: logrotate.conf  msmtprc
download_tracker/: download_tracker.txt
src/: calendar_generator.py  check_errors.sh  event_fingerprint.py  ics_uploader.py  main.py  manager.py  sqlite_tracker.py  telegram_bot.py  utils.py
tests/: test_img_duplication.py
