[tool.poetry]
name = "calendar-generator"
version = "0.1.0"
description = "Parse images and generates a calendar"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "calendar_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
easyocr = "^1.4"
transformers = "^4.20.1"
ics = "^0.7"
arrow = "^1.2.2"
langchain = "^0.0.352"
pytesseract = "^0.3.10"
selenium = "^4.17.2"
python-dateutil = "^2.9.0.post0"
groq = "^0.5.0"
google-cloud-documentai = "^2.29.0"
google-cloud-storage = "^2.17.0"
google-cloud-documentai-toolbox = "^0.13.3a0"
python-telegram-bot = "^21.3"
icalendar = "^5.0.12"
telethon = "^1.36.0"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
